<resources>
    <string name="st_app_name">Playlist Maker</string>
    <string name="st_search">Поиск</string>
    <string name="st_library">Медиатека</string>
    <string name="st_settings">Настройки</string>
    <string name="st_dark_theme">Тёмная тема</string>
    <string name="st_share_app">Поделиться приложением</string>
    <string name="st_support">Написать в поддержку</string>
    <string name="st_user_agreement">Пользовательское соглашение</string>
    <string name="st_input_hint">Поиск</string>
    <string name="st_practicum_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="st_agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="st_mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="st_mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="st_dev_email">fedins.pochta@gmail.com</string>
    <string name="st_no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="st_nothing_found">Ничего не нашлось</string>
    <string name="st_clear_search_history">Очистить историю</string>
    <string name="st_you_searched">Вы искали</string>
    <string name="st_update">Обновить</string>
    <string name="st_unknown_track">Неизвестная композиция</string>
    <string name="st_unknown_artist">Неизвестный исполнитель</string>
    <string name="st_unknown_country">Неизвестная страна</string>
    <string name="st_unknown_genre">Неизвестный жанр</string>
    <string name="st_unknown_year">0000</string>
    <string name="st_unknown_album">Неизвестный альбом</string>
    <string name="st_00_00">00:00</string>
    <string name="st_country">Страна</string>
    <string name="st_genre">Жанр</string>
    <string name="st_year">Год</string>
    <string name="st_album">Альбом</string>
    <string name="st_track_time">Длительность</string>
    <string name="st_00_30">00:30</string>
    <string name="st_artist_name">Имя исполнителя</string>
    <string name="st_track_name">Название композиции</string>
    <string name="st_unknown_cover_url">Unknown Cover</string>
    <string name="st_server_error">Ошибка сервера</string>
    <string name="st_favourites_empty">Ваша медиатека пуста</string>
    <string name="st_playlists_empty">Вы не создали \nни одного плейлиста</string>
    <string name="st_new_playlist">Новый плейлист</string>
    <string name="st_tab_playlists">Плейлисты</string>
    <string name="st_tab_favourites">Избранные треки</string>
    <string name="st_playlist_description">Описание</string>
    <string name="st_playlist_name">Название</string>
    <string name="st_playlist_create">Создать</string>
    <string name="st_add_to_playlist">Добавить в плейлист</string>
    <string name="st_abort_playlist_creation">Завершить создание плейлиста?</string>
    <string name="st_data_loss">Все несохраненные данные будут потеряны</string>
    <string name="st_cancell">Отмена</string>
    <string name="st_complete">Завершить</string>
    <string name="st_share">Поделиться</string>
    <string name="st_no_tracks_in_playlist">В этом плейлисте нет треков</string>
    <string name="st_delete_playlist">Удалить плейлист</string>
    <string name="st_edit">Редактировать</string>
    <string name="st_edit_playlist">Редактировать информацию</string>
    <string name="st_save">Сохранить</string>
    <string name="st_yes">Да</string>
    <string name="st_no">Нет</string>
    <string name="st_do_you_want_to_delete_playlist">Хотите удалить плейлист?</string>
    <string name="st_do_you_want_to_delete_track">Хотите удалить трек?</string>
    <string name="st_theres_no_track_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
</resources>