<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/common_padding_16"
    style="@style/MainScreenBackgoundStyle">

    <TextView
        android:layout_gravity="start"
        android:text="@string/st_app_name"
        android:textColor="@color/white"
        style="@style/MainHeaderStyle"/>

    <Button
        android:id="@+id/bt_main_search"
        android:text="@string/st_search"
        app:icon="@drawable/ic_search"
        style="@style/MainBtnStyle"/>

    <Button
        android:id="@+id/bt_main_library"
        android:text="@string/st_library"
        app:icon="@drawable/ic_library"
        style="@style/MainBtnStyle"/>

    <Button
        android:id="@+id/bt_main_settings"
        android:text="@string/st_settings"
        app:icon="@drawable/ic_settings"
        style="@style/MainBtnStyle"/>
</LinearLayout>