<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/PlayerBackgroudStyle"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_24" />

        <TextView
            android:id="@+id/backArrow4"
            style="@style/SettingsHeaderStyle"
            android:paddingStart="@dimen/dm_20dp"
            app:drawableStartCompat="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/trackCover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="80dp"
            android:src="@drawable/ic_album_placeholder"
            app:layout_constraintDimensionRatio="h, 1:1"
            app:layout_constraintEnd_toStartOf="@+id/rightGuide"
            app:layout_constraintHorizontal_bias="0.411"
            app:layout_constraintStart_toStartOf="@+id/leftGuide"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/playerTrackName"
            style="@style/PlayerTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:text="@string/st_track_name"
            android:textSize="@dimen/dm_22sp"
            app:layout_constraintEnd_toEndOf="@+id/trackCover"
            app:layout_constraintStart_toStartOf="@+id/trackCover"
            app:layout_constraintTop_toBottomOf="@id/trackCover" />

        <TextView
            android:id="@+id/playerArtistName"
            style="@style/PlayerTextStyle"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm_12dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:text="@string/st_artist_name"
            android:textSize="@dimen/dm_14sp"
            app:layout_constraintEnd_toEndOf="@+id/playerTrackName"
            app:layout_constraintStart_toStartOf="@+id/playerTrackName"
            app:layout_constraintTop_toBottomOf="@id/playerTrackName" />

        <ImageButton
            android:id="@+id/playlistAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm_54dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_bt_add"
            app:layout_constraintStart_toStartOf="@+id/playerArtistName"
            app:layout_constraintTop_toBottomOf="@id/playerArtistName"
            tools:ignore="UnknownId,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@android:color/transparent"
            android:fillColor="@color/white"
            android:src="@drawable/ic_bt_play"
            app:layout_constraintEnd_toStartOf="@+id/favourites"
            app:layout_constraintHorizontal_bias="0.574"
            app:layout_constraintStart_toEndOf="@+id/playlistAddButton"
            app:layout_constraintTop_toBottomOf="@id/playerArtistName"
            tools:ignore="UnknownId,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/favourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm_54dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_bt_like"
            app:layout_constraintEnd_toEndOf="@+id/playerTrackName"
            app:layout_constraintTop_toBottomOf="@id/playerArtistName"
            tools:ignore="SpeakableTextPresentCheck" />
        <TextView
            android:id="@+id/trackTimer"
            style="@style/PlayerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/st_00_30"
            android:textSize="@dimen/dm_14sp"
            app:layout_constraintEnd_toStartOf="@+id/favourites"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/playlistAddButton"
            app:layout_constraintTop_toBottomOf="@+id/playButton" />

        <TextView
            android:id="@+id/trackTimeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm_30dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:text="@string/st_track_time"
            android:textColor="@color/yp_dark_grey"
            android:textSize="@dimen/dm_13sp"
            app:layout_constraintStart_toStartOf="@+id/leftGuide"
            app:layout_constraintTop_toBottomOf="@id/trackTimer"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/albumName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm_16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:text="@string/st_album"
            android:textColor="@color/yp_dark_grey"
            android:textSize="@dimen/dm_13sp"
            app:layout_constraintStart_toStartOf="@+id/leftGuide"
            app:layout_constraintTop_toBottomOf="@id/trackTimeName"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/YearName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm_16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:text="@string/st_year"
            android:textColor="@color/yp_dark_grey"
            android:textSize="@dimen/dm_13sp"
            app:layout_constraintStart_toStartOf="@+id/leftGuide"
            app:layout_constraintTop_toBottomOf="@id/albumName" />

        <TextView
            android:id="@+id/genreName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm_16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:text="@string/st_genre"
            android:textColor="@color/yp_dark_grey"
            android:textSize="@dimen/dm_13sp"
            app:layout_constraintStart_toStartOf="@+id/YearName"
            app:layout_constraintTop_toBottomOf="@id/YearName" />

        <TextView
            android:id="@+id/countryName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm_16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:text="@string/st_country"
            android:textColor="@color/yp_dark_grey"
            android:textSize="@dimen/dm_13sp"
            app:layout_constraintStart_toStartOf="@+id/leftGuide"
            app:layout_constraintTop_toBottomOf="@id/genreName" />

        <TextView
            android:id="@+id/time"
            style="@style/PlayerTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm_30dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="end"
            android:maxLines="1"
            android:text="@string/st_00_00"
            android:textSize="@dimen/dm_13sp"
            app:layout_constraintEnd_toStartOf="@+id/rightGuide"
            app:layout_constraintStart_toEndOf="@id/trackTimeName"
            app:layout_constraintTop_toBottomOf="@id/trackTimer" />

        <TextView
            android:id="@+id/album"
            style="@style/PlayerTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm_16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="end"
            android:maxLines="1"
            android:text="@string/st_unknown_album"
            android:textSize="@dimen/dm_13sp"
            app:layout_constraintEnd_toStartOf="@+id/rightGuide"
            app:layout_constraintStart_toEndOf="@id/trackTimeName"
            app:layout_constraintTop_toBottomOf="@id/time" />

        <TextView
            android:id="@+id/year"
            style="@style/PlayerTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm_16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="end"
            android:maxLines="1"
            android:text="@string/st_unknown_year"
            android:textSize="@dimen/dm_13sp"
            app:layout_constraintEnd_toEndOf="@+id/album"
            app:layout_constraintStart_toEndOf="@id/trackTimeName"
            app:layout_constraintTop_toBottomOf="@id/album" />

        <TextView
            android:id="@+id/genre"
            style="@style/PlayerTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm_16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="end"
            android:maxLines="1"
            android:text="@string/st_unknown_genre"
            android:textSize="@dimen/dm_13sp"
            app:layout_constraintEnd_toStartOf="@+id/rightGuide"
            app:layout_constraintStart_toEndOf="@id/trackTimeName"
            app:layout_constraintTop_toBottomOf="@id/year" />

        <TextView
            android:id="@+id/country"
            style="@style/PlayerTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dm_16dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="end"
            android:maxLines="1"
            android:text="@string/st_unknown_country"
            android:textSize="@dimen/dm_13sp"
            app:layout_constraintEnd_toStartOf="@+id/rightGuide"
            app:layout_constraintStart_toEndOf="@id/trackTimeName"
            app:layout_constraintTop_toBottomOf="@id/genre" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/country" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>